--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,14 @@
         <div class="pt-5 flex justify-between w-[100%] items-center">
             <div class="font-bold text-3xl capitalize"><p>nerdy</p></div>
             <div>
-                <ul class="text-[#858383] font-medium capitalize flex gap-10 hover:text-green-700 duration-300">
+                <ul class="text-[#858383] font-medium capitalize flex gap-10">
                     <li><a href="#" class="hover:text-red-700 duration-300">home</a></li>
                     <li><a href="#" class="hover:text-red-700 duration-300">projects</a></li>
                     <li><a href="#" class="hover:text-red-700 duration-300">about</a></li>
                     <li><a href="#" class="hover:text-red-700 duration-300">content</a></li>
                 </ul>
             </div>
-            <button class="capitalize py-3 px-10 bg-[#D8FB78] font-bold text-xl rounded-full border-[1px] border-solid border-green-500 hover:bg-transparent duration-300">buy now</button>
+            <button class="capitalize py-3 px-10 bg-[#D8FB78] font-bold text-xl rounded-full border-[1px] border-solid border-[#D8FB78] hover:bg-transparent duration-300">buy now</button>
         </div>
         <div class="w-[100%] flex justify-between mt-20">
             <div>
@@ -32,13 +32,13 @@
             </div>
         </div>
     </header>
-    <aside class="mt-20 w-[90%] mx-auto">
+    <aside class="mt-20 w-[90%] mx-auto mb-32">
         <div>
             <h1 class="text-center text-[32px] font-bold mb-5">Best Selling Products</h1>
             <p class="text-center w-[827px] mx-auto font-medium text-[#09080FB2]">Unlock your potential with Phitron's Online Judge, a dynamic platform for honing your coding skills through a diverse range of challenges for all experience levels.</p>
         </div>
         <div class="w-[100%] mx-auto flex gap-5">
-            <div class="w-[391px] h-[566px] border-[1px] border-solid border-[#626072b2] rounded-3xl mt-10">
+            <div class="w-[391px] h-[566px] border-[1px] border-solid border-[#E9E9E9] rounded-3xl mt-10">
                 <div class="w-[363px] h-[300px] bg-[#0F0F0F0D] mx-auto flex justify-center mt-3 rounded-3xl">
                     <img src="../assets/image2.png" alt="image here">
                 </div>
@@ -49,13 +49,63 @@
                 <div>
                     <button class="w-[95%] ml-2 py-4 mt-5 mb-5 bg-[#D8FB78] rounded-full font-medium text-xl capitalize border-[1px] border-solid border-[#D8FB78] hover:bg-transparent duration-300">buy now</button>
                     <div class="flex items-center gap-5">
-                    <button class="w-[75%] ml-2 py-4 rounded-full font-medium text-xl capitalize border-[1px] border-solid border-[#4C4C4C]">Add to car</button><span class="group/icon1 w-[51px] h-[51px] rounded-full border-[1px] border-solid border-[#FF582F] grid place-items-center text-[#FF582F] cursor-pointer"> <i class="fa-regular fa-heart opacity-100 z-10 group-hover/icon1:opacity-0 group-hover/icon1:hidden duration-500"></i> <i class="fa-solid fa-heart text-[#FF582F] hidden opacity-0 group-hover/icon1:opacity-100 group-hover/icon1:inline-block duration-500"></i></span>
+                    <button class="w-[75%] ml-2 py-4 rounded-full font-medium text-xl capitalize border-[1px] border-solid border-[#E9E9E9] hover:bg-green-500 hover:border-green-500 duration-300">Add to car</button><span class="group/icon1 w-[51px] h-[51px] rounded-full border-[1px] border-solid border-[#858383] hover:border-[#FF582F] duration-300 grid place-items-center text-[#858383] hover:text-[#FF582F] cursor-pointer relative"> <i class="fa-regular fa-heart opacity-100 z-10 group-hover/icon1:opacity-0 group-hover/icon1:hidden duration-500"></i> <i class="fa-solid fa-heart text-[#FF582F] group-hover/icon1:opacity-100 duration-500 absolute text-center inline-block opacity-0"></i></span>
                 </div>
                 </div>
             </div>
-            <div class="w-[391px] h-[566px] border-[1px] border-solid border-[#626072b2] rounded-3xl mt-10"></div>
-            <div class="w-[391px] h-[566px] border-[1px] border-solid border-[#626072b2] rounded-3xl mt-10"></div>
+            <div class="w-[391px] h-[566px] border-[1px] border-solid border-[#E9E9E9] rounded-3xl mt-10">
+                <div class="w-[363px] h-[300px] bg-[#0F0F0F0D] mx-auto flex justify-center mt-3 rounded-3xl">
+                <img src="../assets/image2.png" alt="image here">
+            </div>
+            <div class="pl-4 pt-5">
+                <p class="font-medium text-lg">Balenciaga Floral-Print Silk Shirt</p>
+                <p class="font-medium text-[#626072b2]">$1644.00</p>
+            </div>
+            <div>
+                <button class="w-[95%] ml-2 py-4 mt-5 mb-5 bg-[#D8FB78] rounded-full font-medium text-xl capitalize border-[1px] border-solid border-[#D8FB78] hover:bg-transparent duration-300">buy now</button>
+                <div class="flex items-center gap-5">
+                <button class="w-[75%] ml-2 py-4 rounded-full font-medium text-xl capitalize border-[1px] border-solid border-[#E9E9E9] hover:bg-green-500 hover:border-green-500 duration-300">Add to car</button><span class="group/icon1 w-[51px] h-[51px] rounded-full border-[1px] border-solid border-[#858383] hover:border-[#FF582F] duration-300 grid place-items-center text-[#858383] hover:text-[#FF582F] cursor-pointer relative"> <i class="fa-regular fa-heart opacity-100 z-10 group-hover/icon1:opacity-0 group-hover/icon1:hidden duration-500"></i> <i class="fa-solid fa-heart text-[#FF582F] group-hover/icon1:opacity-100 duration-500 absolute text-center inline-block opacity-0"></i></span>
+            </div>
+            </div>
+        </div>
+            <div class="w-[391px] h-[566px] border-[1px] border-solid border-[#E9E9E9] rounded-3xl mt-10"><div class="w-[363px] h-[300px] bg-[#0F0F0F0D] mx-auto flex justify-center mt-3 rounded-3xl">
+                <img src="../assets/image2.png" alt="image here">
+            </div>
+            <div class="pl-4 pt-5">
+                <p class="font-medium text-lg">Balenciaga Floral-Print Silk Shirt</p>
+                <p class="font-medium text-[#626072b2]">$1644.00</p>
+            </div>
+            <div>
+                <button class="w-[95%] ml-2 py-4 mt-5 mb-5 bg-[#D8FB78] rounded-full font-medium text-xl capitalize border-[1px] border-solid border-[#D8FB78] hover:bg-transparent duration-300">buy now</button>
+                <div class="flex items-center gap-5">
+                <button class="w-[75%] ml-2 py-4 rounded-full font-medium text-xl capitalize border-[1px] border-solid border-[#E9E9E9] hover:bg-green-500 hover:border-green-500 duration-300">Add to car</button><span class="group/icon1 w-[51px] h-[51px] rounded-full border-[1px] border-solid border-[#858383] hover:border-[#FF582F] duration-300 grid place-items-center text-[#858383] hover:text-[#FF582F] cursor-pointer relative"> <i class="fa-regular fa-heart opacity-100 z-10 group-hover/icon1:opacity-0 group-hover/icon1:hidden duration-500"></i> <i class="fa-solid fa-heart text-[#FF582F] group-hover/icon1:opacity-100 duration-500 absolute text-center inline-block opacity-0"></i></span>
+            </div>
+            </div>
+            </div>
         </div>
     </aside>
+    <nav class="h-[481px] bg-[#F2F4F6]">
+            <div class="font-bold text-4xl capitalize text-center pt-20"><p>nerdy</p></div>
+            <div class="flex justify-center w-full mt-10">
+                <ul class="text-[#858383] font-medium capitalize flex gap-10">
+                    <li><a href="#" class="hover:text-red-700 duration-300">home</a></li>
+                    <li><a href="#" class="hover:text-red-700 duration-300">projects</a></li>
+                    <li><a href="#" class="hover:text-red-700 duration-300">about</a></li>
+                    <li><a href="#" class="hover:text-red-700 duration-300">content</a></li>
+                </ul>
+            </div>
+            <div class="flex justify-center w-full gap-8 mt-10 text-[25px]">
+                <i class="fa-brands fa-facebook text-blue-700 cursor-pointer"></i>
+                <i class="fa-brands fa-x-twitter cursor-pointer"></i>
+                <i class="fa-brands fa-linkedin text-blue-700 cursor-pointer"></i>
+                <i class="fa-brands fa-youtube text-red-600 cursor-pointer"></i>
+            </div>
+            <form action="#" method="post">
+            <div class="mt-12 flex w-full justify-center">
+                <input type="email" class="w-[500px] h-[52px] rounded-full placeholder:capitalize font-medium px-7 border-none outline-none text-[#858383]" placeholder="enter email address" required>
+                <button class="capitalize px-10 py-3 rounded-full bg-green-500 font-medium ml-5 hover:bg-transparent border-[1px] border-solid border-green-500 duration-300">subscribe</button>
+            </div>
+        </form>
+    </nav>
 </body>
 </html>
